--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"author": "Eric Lesniewski",
 	"name": "fcc-learn-npm-package-json",
+	"author": "Jane Doe",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
